[package]
name        = "project-catalyst"
version     = "24.42.1"
authors     = ["Emmett Jayhart <erudite@jayhart.io>"]
edition     = "2021"
description = "Project Catalyst"
repository  = "https://github.com/EmmettJayhart/project-catalyst"
readme      = "README.md"
license     = "Apache-2.0 OR MIT"
publish     = false
resolver    = "2"

[dependencies]

[features]
dev = []
